2016-03-14  Per Bothner  <per@bothner.com>

	Fix Savannah bug #47412 "Can't use define in the constructor of a
	subclass".
	* ClassExp.java (compileMember): Change logic for compiling
	super/this constructors in their place in the Expresson structure.
	This handles constructors in LetExpr creates for <body> blocks.
	(compileCallInitMethods): New helper method.
	* LambdaExp.java (getBodyFirstExpression): Handle LetExp.
	(compileBody): Set and restore currentScope.
	* ApplyExp.java (IS_SUPER_INIT): New flag.
	(compile): Compile "$finit$" calls if IS_SUPER_INIT.
	* Expression.java (compileButFirst): Remove no-longer-used method.

2016-02-24  Per Bothner  <per@bothner.com>

	Add support for command-line completion.
	* CommandCompleter.java: New class.
	* NameLookup.java (getCompletingSymbols): New method.

2016-02-12  Per Bothner  <per@bothner.com>

	* ApplyExp.java (finishTrampoline): Factor out "runUntilDone"
	and related handling into separate method.
	* PrimProcedure.java (compileInvoke): Use finishTrampoline.
	This fixes a bug with runUntilDone not being called.

2016-02-11  Per Bothner  <per@bothner.com>

	* StackTarget.java: Better handling of Lazy values.

	* StackTarget.java (emitCoerceFromObject): Add extra cast if
	needed for OccurrenceType.

2016-02-02  Per Bothner  <per@bothner.com>

	* KawaConvert.java (isTrue): A Lazy value has to be forced.
	* ConditionalTarget.java (compileFromStack): Check if value might
	be Lazy.

2016-01-31  Per Bothner  <per@bothner.com>

	* Compilation.java (process): Defer setting ERROR_SEEN, since some
	useful error and warning messages may happen in later states.

2016-01-30  Per Bothner  <per@bothner.com>

	* QuoteExp.java (emptyExp): New static.
	* LambdaExp.java: Use it.

2016-01-27  Per Bothner  <per@bothner.com>

	* ReferenceExp.java (apply): Fix eval when context is MouleExp.

	* ClassExp.java: Check for null - which can happen on error.
	* InlineCalls.java: Likewise.

2015-11-27  Per Bothner  <per@bothner.com>
